[project]
name = "ComfyUI-AutoCPUOffload"
version = "0.1.0"
authors = [{ name = "Thales Fernandes", email = "thalesfdfernadnes@gmail.com" }]
description = "An experimental ComfyUI extension to automatically offload model layers to the CPU, reducing VRAM usage."
readme = "README.md"
keywords = ["comfyui", "diffusion", "vram", "gpu", "offload", "pytorch"]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["torch>=2.8.0", "tqdm>=4.67.1"]

[project.urls]
Homepage = "https://github.com/tfernd/ComfyUI-AutoCPUOffload"
Repository = "https://github.com/tfernd/ComfyUI-AutoCPUOffload"
"Bug Tracker" = "https://github.com/tfernd/ComfyUI-AutoCPUOffload/issues"

[dependency-groups]
dev = ["ipykernel==6.30.1", "ruff==0.12.9"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = []

[tool.ruff.format]
